Replace redundant IntelliJPlatformConstants with proper constants